# QuantumQuench

./: .gitignore  README.md  quench.ipynb  setup.cfg
data/: AnalyticalSolution_N12_J-1_h2_tmax100_num1000_periodicFalse  AnalyticalSolution_N12_J-1_h2_tmax10_num100_periodicFalse  AnalyticalSolution_N12_J-1_h80_tmax10_num100_periodicFalse  AnalyticalSolution_N12_J-1_h8_tmax10_num100_periodicFalse  AnalyticalSolution_N16_J-1_h2_tmax100_num100_periodicFalse  AnalyticalSolution_N16_J-1_h2_tmax100_num500_periodicFalse  AnalyticalSolution_N16_J-1_h2_tmax10_num100_periodicFalse  AnalyticalSolution_N16_J-1_h8_tmax10_num100_periodicFalse  AnalyticalSolution_N6_J-1_h200_dt0.1_num100  correlators_N10_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  correlators_N15_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  correlators_N15_J-1.0_h2.0_steps100_periodicTrue_invTrue_bias0.0  fidelity_N14_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  fidelity_N16_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  fidelity_N4_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  fidelity_N6_J-1.0_h2.0_steps100_periodicFalse_invTrue_bias0.0  kinks_N10_J-1.0_h2.0_dt0.01_steps1000_periodicFalse_invTrue_bias0.0  kinks_N10_J-1.0_h2.0_dt0.01_steps1500_periodicTrue_invTrue  kinks_N10_J-1.0_h2.0_dt0.1_steps1000_periodicFalse_invTrue_bias0.0  kinks_N10_J-1.0_h2.0_dt0.1_steps1000_periodicFalse_invTrue_bias0.125  kinks_N10_J-1.0_h2.0_dt0.1_steps1000_periodicTrue_invTrue_bias0.0  kinks_N10_J-1.0_h2.0_dt0.1_steps100_periodicFalse_invTrue_bias0.0  kinks_N10_J-1.0_h5.0_dt0.01_steps200_periodicTrue_invTrue  (+85 more)
(+95 files in other folders)
