[metadata]
name = QuantumQuench
version = 1.0.0
author = Daniil Teplitskiy

[options]
zip_safe = False
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    numpy>=1.22
    scipy==1.11.3
    plotly==5.8.2
    matplotlib==3.5.2
    qiskit==0.45.0
    qiskit-aer==0.13.0
    tqdm==4.66.1
    qiskit-nature==0.7.1
    qutip==4.7.3

[options.packages.find]
where = src
